--- a/frontend/dashboardTeachers.html
+++ b/frontend/dashboardTeachers.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li class="mb-4">
-              <a href="createQuiz.html" class="text-white hover:text-blue-200 block py-3 px-4 rounded-lg text-lg font-medium transition duration-200 hover:bg-blue-700">
+              <a href="quizCreated.html" class="text-white hover:text-blue-200 block py-3 px-4 rounded-lg text-lg font-medium transition duration-200 hover:bg-blue-700">
                 <i class="fas fa-pencil-alt mr-3"></i> Quiz Created
               </a>
             </li>
