--- a/frontend/createQuiz.html
+++ b/frontend/createQuiz.html
@@ -176,6 +176,9 @@
     function publishQuiz() {
       alert('Quiz published! (This is a placeholder — integrate with backend to save permanently.)');
     }
+    function publishQuiz() {
+      window.location.href = 'published.html';
+    }
 
     // Initialize first step
     showStep(currentStep);
