update dashboard, semua ah

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
     /* Apply Inter font family */
     body {
       font-family: 'Inter', sans-serif;
+      scroll-behavior: smooth;
     }
 
     /* Ensure images are responsive */
@@ -58,10 +59,6 @@
     </section>
 
     <!-- About -->
-    <section id="about">
-      <h2>About Quizify</h2>
-      <p>Quizify is an interactive online quiz platform designed to make learning fun, engaging, and effective through
-        personalized quizzes and instant feedback.</p>
       <section id="about" class="py-16">
         <h2 class="text-3xl font-bold text-center mb-8">About Quizify</h2>
         <p class="text-lg text-center max-w-3xl mx-auto">Quizify is an interactive online quiz platform designed to make
@@ -123,18 +120,6 @@
   </main>
 
   <!-- Footer -->
-  <footer>
-    <section id="contact">
-      <div class="social-icons">
-        <a href="#"><img
-            src="https://www.citypng.com/public/uploads/preview/square-facebook-fb-social-media-app-icon-logo-701751695134768wct6irlkok.png"
-            alt="Facebook" /></a>
-        <a href="#"><img
-            src="https://www.citypng.com/public/uploads/preview/black-and-white-outline-instagram-app-logo-icon-7017516951369307x990iaok2.png"
-            alt="Instagram" /></a>
-        <a href="#"><img
-            src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png"
-            alt="Twitter" /></a>
         <footer class="w-full py-8 text-center shadow-inner mt-8">
           <section id="contact" class="container mx-auto px-4">
             <div class="social-icons flex justify-center space-x-6 mb-4">
