--- a/frontend/quizResult.html
+++ b/frontend/quizResult.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="bg-sky-600 text-white h-20 flex justify-between items-center px-8 fixed top-0 left-0 w-full z-50 shadow-md overflow-hidden">
     <div class="logo flex items-center gap-3">
-      <img src="images/quizify2.png" alt="Quizify Logo" class="h-12 object-contain" />
+      <img src="https://placehold.co/48x48/0288d1/ffffff?text=Q" alt="Quizify Logo" class="h-12 object-contain" />
       <span class="text-xl font-bold"></span>
     </div>
     <nav>
@@ -35,7 +35,7 @@
     <div id="feedback" class="text-base text-gray-600 mb-6"></div>
 
     <div class="actions flex flex-wrap justify-center gap-4">
-      <button onclick="retakeQuiz()" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Retake Quiz</button>
+      <a href="takeQuiz.html" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition flex items-center justify-center">Retake Quiz</a>
       <button onclick="reviewAnswers()" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Review Answers</button>
     </div>
   </main>
