--- a/frontend/TeacherProfilePage.html
+++ b/frontend/TeacherProfilePage.html
@@ -74,9 +74,9 @@
       <button id="save-btn" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-6 rounded-md shadow-md transition duration-300 ease-in-out transform hover:scale-105">
         <i class="fas fa-save mr-2"></i> Save Changes
       </button>
-      <button id="back-btn" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-md shadow-md transition duration-300 ease-in-out transform hover:scale-105">
+      <a href="dashboardTeachers.html" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-md shadow-md transition duration-300 ease-in-out transform hover:scale-105">
         <i class="fas fa-arrow-left mr-2"></i> Back to Dashboard
-      </button>
+      </a>
     </div>
   </div>
 
