--- a/frontend/dashboardTeachers.html
+++ b/frontend/dashboardTeachers.html
@@ -35,7 +35,7 @@
           <i class="fas fa-caret-down text-blue-600"></i>
         </div>
         <div class="absolute right-0 mt-2 w-36 bg-white rounded-md shadow-lg py-1 hidden group-hover:block z-10 border border-gray-100">
-          <a href="#" id="profile-btn" class="block px-4 py-2 text-gray-700 hover:bg-blue-50 hover:text-blue-700 transition duration-200">Profile</a>
+          <a href="teacherProfilePage.html" id="profile-btn" class="block px-4 py-2 text-gray-700 hover:bg-blue-50 hover:text-blue-700 transition duration-200">Profile</a>
           <a href="#" id="logout-btn" class="block px-4 py-2 text-gray-700 hover:bg-red-50 hover:text-red-700 transition duration-200">Log out</a>
         </div>
       </div>
@@ -102,7 +102,6 @@
                 <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Quiz Name</th>
                 <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Score</th>
                 <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider rounded-tr-lg">Grade</th>
-                <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Actions</th>
               </tr>
             </thead>
             <tbody id="quizTableBody" class="bg-white divide-y divide-gray-100">
@@ -113,8 +112,6 @@
                 <td class="py-3 px-4 whitespace-nowrap text-sm text-gray-700">85/100</td>
                 <td class="py-3 px-4 whitespace-nowrap text-sm text-green-600 font-semibold">A-</td>
                 <td class="py-3 px-4 whitespace-nowrap text-right text-sm font-medium">
-                  <a href="#" class="text-blue-600 hover:text-blue-900 mr-3">View</a>
-                  <a href="#" class="text-red-600 hover:text-red-900">Delete</a>
                 </td>
               </tr>
               <tr class="hover:bg-gray-50 transition duration-150">
@@ -123,8 +120,6 @@
                 <td class="py-3 px-4 whitespace-nowrap text-sm text-gray-700">72/100</td>
                 <td class="py-3 px-4 whitespace-nowrap text-sm text-yellow-600 font-semibold">C+</td>
                 <td class="py-3 px-4 whitespace-nowrap text-right text-sm font-medium">
-                  <a href="#" class="text-blue-600 hover:text-blue-900 mr-3">View</a>
-                  <a href="#" class="text-red-600 hover:text-red-900">Delete</a>
                 </td>
               </tr>
               <tr class="hover:bg-gray-50 transition duration-150">
@@ -133,8 +128,6 @@
                 <td class="py-3 px-4 whitespace-nowrap text-sm text-gray-700">95/100</td>
                 <td class="py-3 px-4 whitespace-nowrap text-sm text-green-600 font-semibold">A</td>
                 <td class="py-3 px-4 whitespace-nowrap text-right text-sm font-medium">
-                  <a href="#" class="text-blue-600 hover:text-blue-900 mr-3">View</a>
-                  <a href="#" class="text-red-600 hover:text-red-900">Delete</a>
                 </td>
               </tr>
               <!-- End Example Quiz Data -->
