add function button

--- a/frontend/dashboardTeachers.html
+++ b/frontend/dashboardTeachers.html
@@ -31,12 +31,12 @@
       <div class="relative group self-end sm:self-auto">
         <div class="flex items-center space-x-2 p-3 rounded-lg hover:bg-blue-50 transition cursor-pointer">
           <!-- Using a placeholder for the logo as the image file was not provided directly -->
-          <img src="images/quzify4.png" alt="Quizify Logo" class="h-10" />
+          <img src="images/quzify4.png" alt="Quizify Logo" class="h-10" />
           <i class="fas fa-caret-down text-blue-600"></i>
         </div>
         <div class="absolute right-0 mt-2 w-36 bg-white rounded-md shadow-lg py-1 hidden group-hover:block z-10 border border-gray-100">
           <a href="teacherProfilePage.html" id="profile-btn" class="block px-4 py-2 text-gray-700 hover:bg-blue-50 hover:text-blue-700 transition duration-200">Profile</a>
-          <a href="#" id="logout-btn" class="block px-4 py-2 text-gray-700 hover:bg-red-50 hover:text-red-700 transition duration-200">Log out</a>
+          <a href="login.html" id="logout-btn" class="block px-4 py-2 text-gray-700 hover:bg-red-50 hover:text-red-700 transition duration-200">Log out</a>
         </div>
       </div>
     </header>
@@ -129,6 +129,7 @@
                 <td class="py-3 px-4 whitespace-nowrap text-sm text-green-600 font-semibold">A</td>
                 <td class="py-3 px-4 whitespace-nowrap text-right text-sm font-medium">
                 </td>
+              </td>
               </tr>
               <!-- End Example Quiz Data -->
             </tbody>
