--- a/frontend/quizResult.html
+++ b/frontend/quizResult.html
@@ -36,7 +36,7 @@
 
     <div class="actions flex flex-wrap justify-center gap-4">
       <a href="takeQuiz.html" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition flex items-center justify-center">Retake Quiz</a>
-      <button onclick="reviewAnswers()" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Review Answers</button>
+      <a href="review_answer.php" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition flex items-center justify-center">Review Answers</a>
     </div>
   </main>
 
