--- a/frontend/quizCreated.html
+++ b/frontend/quizCreated.html
@@ -41,7 +41,7 @@
 
     <!-- Subject + Quizzes Row -->
     <div class="space-y-10">
-      <!-- Subject Row -->
+      <!-- Mathematics Subject Row -->
       <div class="flex flex-wrap gap-6 items-stretch">
         <!-- Subject Card -->
         <div class="bg-white p-6 rounded-xl shadow w-full sm:w-60 flex flex-col justify-center">
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <!-- Another Subject Row -->
+      <!-- Science Subject Row -->
       <div class="flex flex-wrap gap-6 items-stretch">
         <!-- Subject Card -->
         <div class="bg-white p-6 rounded-xl shadow w-full sm:w-60 flex flex-col justify-center">
@@ -87,6 +87,47 @@
           </div>
         </div>
       </div>
+
+      <!-- History Subject Row -->
+      <div class="flex flex-wrap gap-6 items-stretch">
+        <!-- Subject Card -->
+        <div class="bg-white p-6 rounded-xl shadow w-full sm:w-60 flex flex-col justify-center">
+          <h2 class="text-lg font-semibold text-[#0277bd] text-center">History</h2>
+        </div>
+
+        <!-- Quiz Cards -->
+        <div class="flex-1 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
+            <h3 class="text-lg font-semibold text-[#0277bd] mb-2">World War I</h3>
+            <p class="text-sm text-gray-700">Key events and figures of the Great War.</p>
+          </div>
+          <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
+            <h3 class="text-lg font-semibold text-[#0277bd] mb-2">Ancient Civilizations</h3>
+            <p class="text-sm text-gray-700">Explore the rise and fall of ancient empires.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Literature Subject Row (New) -->
+      <div class="flex flex-wrap gap-6 items-stretch">
+        <!-- Subject Card -->
+        <div class="bg-white p-6 rounded-xl shadow w-full sm:w-60 flex flex-col justify-center">
+          <h2 class="text-lg font-semibold text-[#0277bd] text-center">Literature</h2>
+        </div>
+
+        <!-- Quiz Cards -->
+        <div class="flex-1 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
+            <h3 class="text-lg font-semibold text-[#0277bd] mb-2">Classic Novels</h3>
+            <p class="text-sm text-gray-700">Test your knowledge of literary masterpieces.</p>
+          </div>
+          <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
+            <h3 class="text-lg font-semibold text-[#0277bd] mb-2">Poetry Analysis</h3>
+            <p class="text-sm text-gray-700">Dive deep into the world of poetic expression.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </main>
 
