--- a/frontend/dashboardTeachers.html
+++ b/frontend/dashboardTeachers.html
@@ -70,7 +70,7 @@
               </select>
             </li>
             <li class="mb-4">
-              <a href="#" class="text-white hover:text-blue-200 block py-3 px-4 rounded-lg text-lg font-medium transition duration-200 hover:bg-blue-700">
+                <a href="quizLibrary.html" class="text-white hover:text-blue-200 block py-3 px-4 rounded-lg text-lg font-medium transition duration-200 hover:bg-blue-700">
                 <i class="fas fa-book-open mr-3"></i> Quiz Library
               </a>
             </li>
@@ -140,6 +140,10 @@
   </div>
 
   <!-- JavaScript Logic -->
-  <script type="module" src="dashboardTeacher2.js"></script>
+  <script>
+    function goToQuizLibrary() {
+      window.location.href = 'quizLibrary.html';
+    }
+  </script>
 </body>
 </html>
