--- a/frontend/quizResult.html
+++ b/frontend/quizResult.html
@@ -13,12 +13,20 @@
   <header class="bg-sky-600 text-white h-20 flex justify-between items-center px-8 fixed top-0 left-0 w-full z-50 shadow-md overflow-hidden">
     <div class="logo flex items-center gap-3">
       <img src="https://placehold.co/48x48/0288d1/ffffff?text=Q" alt="Quizify Logo" class="h-12 object-contain" />
-      <span class="text-xl font-bold"></span>
+      <span class="text-xl font-bold">Quizify</span>
     </div>
     <nav>
       <ul class="flex gap-6 text-sm font-semibold">
-        <li><a href="#" id="dashboard-btn" class="hover:text-sky-100 relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-white hover:after:w-full after:transition-all">Dashboard</a></li>
-        <li><a href="#" id="logout-btn" class="hover:text-sky-100 relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-white hover:after:w-full after:transition-all">Logout</a></li>
+        <li>
+          <a href="dashboard.html" class="hover:text-sky-100 relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-white hover:after:w-full after:transition-all">
+            Dashboard
+          </a>
+        </li>
+        <li>
+          <a href="login.html" onclick="logout()" class="hover:text-sky-100 relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5 after:bg-white hover:after:w-full after:transition-all">
+            Logout
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -40,6 +48,20 @@
     </div>
   </main>
 
-  <script src="quizResult2.js"></script>
+  <script>
+    function goToDashboard() {
+      window.location.href = 'dashboard.html';
+    }
+
+    function logout() {
+      // Optional: clear localStorage/sessionStorage if used
+      localStorage.clear();
+      sessionStorage.clear();
+
+      // Redirect to login page or logout handler
+      window.location.href = 'login.html';
+    }
+  </script>
+
 </body>
 </html>
