--- a/frontend/takeQuiz.html
+++ b/frontend/takeQuiz.html
@@ -34,7 +34,7 @@
       <!-- Questions will be dynamically inserted here -->
     </form>
 
-    <button id="submit-btn" class="hidden mt-6 w-full bg-[#0288d1] text-white font-bold py-3 px-4 rounded-md shadow-md transition duration-300 ease-in-out transform hover:scale-105">
+    <button id="submit-btn" onclick="submitQuiz()" class="hidden mt-6 w-full bg-[#0288d1] text-white font-bold py-3 px-4 rounded-md shadow-md transition duration-300 ease-in-out transform hover:scale-105">
       Submit Quiz
     </button>
 
@@ -50,6 +50,12 @@
     });
   </script>
 
-  <script src="takeQuiz2.js" type="module"></script>
+  <script>
+    function submitQuiz() {
+      // Optional: validate answers or store data here
+      window.location.href = 'quizResult.html';
+    }
+  </script>
+
 </body>
 </html>
